--- a/assets/css/_modules-pdp.scss
+++ b/assets/css/_modules-pdp.scss
@@ -342,6 +342,7 @@
 			@include tablet-down {
 				width: 32px;
 				height: 32px;
+				padding: 5px;
 			}
 		}
 
